--- a/CSS/Tw-styles.css
+++ b/CSS/Tw-styles.css
@@ -599,7 +599,7 @@ h1 {
     font-size: 1.1em;
     border-radius: 15px;
     margin: 10px 0;
-    padding: 15px;
+    padding: 15px 40px 15px 15px;
     cursor: pointer;
     transition: background-color 0.3s ease;
     text-align: left;
